-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.6.2
-
None
-
Ubuntu 10.04.1 LTS
-
a8a5b38b000ee8d4eed099bfc0a8a3528df6ad17
Leak occurs in qsslsocket_openssl.cpp following to call to q_SSL_load_error_strings() in QSslSocketPrivate::ensureInitialized.
According to OpenSSL documentation, calls to q_SSL_load_error_strings must eventually be followed by a call to ERR_free_strings to free the loaded strings. ERR_free_strings does not seem to be called at all in Qt SSL files.
Call stack is available in attached Valgrind report extract.
For Gerrit Dashboard: QTBUG-15732 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
21994,4 | QSslSocket: call to ERR_free_strings to free loaded error strings | master | qt/qtbase | Status: MERGED | +2 | 0 |